--- a/iframe.html
+++ b/iframe.html
@@ -39,7 +39,7 @@
         return true;
     };
 
-    toScrollFrame('#scrollee', '#object');
+   /* toScrollFrame('#scrollee', '#object');*/
 
 </script>
 </body>
